--- a/.env.template
+++ b/.env.template
@@ -11,6 +11,8 @@ RAG_REGION=YouRegio
 
 # Historical period (days) for data collection
 RAG_DAYS_BACK=365
+## Number of pages to fetch
+MAX_PAGES=100
 
 # ============= API KEYS =============
 # Mistral API key for embeddings (required for Phase 3)
