add arg max-pages

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,11 @@
             "type": "debugpy",
             "request": "launch",
             "program": "${workspaceFolder}/scripts/run_fetch_pipeline.py",
-            "console": "integratedTerminal"
+            "console": "integratedTerminal",
+            "args": [
+                "--max-pages",
+                "100"
+            ],
         }
     ]
 }
