--- a/.env.template
+++ b/.env.template
@@ -9,6 +9,9 @@ RAG_ENVIRONMENT=development
 # Geographic region for event filtering
 RAG_REGION=YouRegio
 
+# FROZEN snapshot for reproducible testing (Phase 2-5)
+DEV_SNAPSHOT_DATE = "2026-01-29"
+
 # Historical period (days) for data collection
 RAG_DAYS_BACK=365
 ## Number of pages to fetch
